test candidate initial work

--- a/index.html
+++ b/index.html
@@ -64,5 +64,21 @@ hr {margin:2em 0; padding:0;}
 </ul></li>
 </ul>
 
+<h2>Usability testing</h2>
+<h3>Test candidate 1</h3>
+<ul>
+<li><a href="studenthome-t1.html">StudentHome</a></li>
+<li><a href="profile-t1.html">Profile</a></li>
+<li><a href="study-record-t1a.html">Study record a</a></li>
+<li><a href="study-record-t1b.html">Study record b (deferred with assessment banking)</a></li>
+<li><a href="study-record-t1c.html">Study record c (resitting)</a></li>
+<li><a href="study-record-t1d.html">Study record d (lapsed)</a></li>
+<li><a href="study-record-t1e.html">Study record e (study break)</a></li>
+<li><a href="module-record-t1a.html">Module record a</a></li>
+<li><a href="module-record-t1b.html">Module record b (completed)</a></li>
+<li><a href="module-record-t1c.html">Module record c (deferred)</a></li>
+<li><a href="module-record-t1d.html">Module record d (resit)</a></li>
+</ul>
+
 </body>
 </html>
