--- a/study-record-t1a.html
+++ b/study-record-t1a.html
@@ -130,22 +130,21 @@ $(document).ready(function(){
 
 <div class="box-qual">
 
-<h2>Bachelor of Engineering (Honours) <a href="#" class="show-hide minus">Expand/collapse</a> </h2>
+<h2>BA/BSc (Honours) Open degree<a href="#" class="show-hide minus">Expand/collapse</a> </h2>
 
 
 <div class="box-qual-inner">
 
 <ul class="list-style1">
-  <li><strong>Code</strong>: Q65</li>
+  <li><strong>Code</strong>: QD</li>
   <li><strong>Status</strong>: in progress</li>
-  <li><strong>Credits</strong>: 180 of 360</li>
-  <li><strong>Pathway</strong>: Engineering design</li>
+  <li><strong>Credits</strong>: 90 of 360</li>
 </ul>
 
 <table class="qual-progress">
   <tr>
     <td colspan="3">
-    <div class="progress-bar"><span class="progress" style="width:50%;">50%</span></div>
+    <div class="progress-bar"><span class="progress" style="width:25%;">25%</span></div>
     </td>
     </tr>
   <tr>
@@ -165,10 +164,7 @@ $(document).ready(function(){
 
 <table>
   <tr>
-    <td><a href="module-record-a-t276.html">Engineering: professions, practice and skills 2 (T276)</a></td>
-  </tr>
-  <tr>
-    <td><a href="module-record-a-t218.html">Design for engineers (T218)</a></td>
+    <td><a href="module-record-t1a.html">Investigating the social world (DD103)</a></td>
   </tr>
 </table>
 
@@ -177,29 +173,14 @@ $(document).ready(function(){
 
 <table>
   <tr>
-    <td><a href="module-record-a-t207.html"> Engineering: mechanics, materials, design (T207)</a></td>
-    <td>2014</td>
-    <td>Grade 3 pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Engineering: professions, practice and skills 1 (T176)</a></td>
+    <td><a href="module-record-t1b.html"> Introducing the social sciences (DD102)</a></td>
     <td>2014</td>
     <td>Pass</td>
   </tr>
   <tr>
-    <td><a href="#">Exploring mathematics (MS221)</a></td>
+    <td><a href="module-record-t1b.html">People, work and Society Access module (Y032)</a></td>
     <td>2013</td>
-    <td>Grade 4 pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Using mathematics (MST121)</a></td>
-    <td>2013</td>
-    <td>Grade 3 pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Engineering the future (T173)</a></td>
-    <td>2012</td>
-    <td>Distinction</td>
+    <td>Pass</td>
   </tr>
 </table>
 
