--- a/study-record-t1a.html
+++ b/study-record-t1a.html
@@ -106,8 +106,8 @@ $(document).ready(function(){
 
 
 <ol class="ou-breadcrumb">
-	<li><a href="studenthome-a.html">StudentHome</a></li>
-	<li><a href="profile-a.html">Profile</a></li>
+	<li><a href="studenthome-t1.html">StudentHome</a></li>
+	<li><a href="profile-t1.html">Profile</a></li>
 	<li>Study record</li></ol>
 
 
@@ -296,7 +296,7 @@ $(document).ready(function(){
 </div> --><!-- end box-qual -->
 
 
-<p><a href="profile.html">Back to Profile</a></p>
+<p><a href="profile-t1.html">Back to Profile</a></p>
 
 </div>
 
