updated loan page for test candidate 1

--- a/your-loan-t1.html
+++ b/your-loan-t1.html
@@ -111,7 +111,7 @@
 
 
         <p id="ctl00_cphCEN_pLoanModules">
-            </p><div>The following modules require a 2015/2016 Part-time Tuition Fee Loan</div><div><table class="say_modules"><colgroup><col width="20%"><col width="60%"><col width="20%"></colgroup><tbody><tr><td>T218</td><td>Design for engineers</td><td>October 2015</td></tr><tr><td>T276</td><td>Engineering: professions, practice and skills 2</td><td>January 2016</td></tr></tbody></table></div>
+            </p><div>The following module requires a 2015/2016 Part-time Tuition Fee Loan</div><div><table class="say_modules"><colgroup><col width="20%"><col width="60%"><col width="20%"></colgroup><tbody><tr><td>DD103</td><td>Investigating the social world</td><td>October 2015</td></tr></tbody></table></div>
         <p></p>
 
 
@@ -226,7 +226,7 @@
     </div>
 
 
-      </div>
+			</div>
     </div>
   </div>
 </div>
