--- a/study-record-t1a.html
+++ b/study-record-t1a.html
@@ -184,7 +184,7 @@ $(document).ready(function(){
   </tr>
 </table>
 
-<p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
+<p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA/BSc (Honours) Open degree qualification</p>
 
 <hr>
 
