--- a/study-record-t1b.html
+++ b/study-record-t1b.html
@@ -160,7 +160,7 @@ $(document).ready(function(){
       <h3>Cancelled modules      </h3>
       <table>
         <tr>
-          <td><a href="module-record-t1a.html">Investigating the social world (DD103)</a> (deferred, assessment banked)</td>
+          <td><a href="module-record-t1c.html">Investigating the social world (DD103)</a> (deferred, assessment banked)</td>
         </tr>
     </table>
 
