--- a/study-record-t1c.html
+++ b/study-record-t1c.html
@@ -140,18 +140,18 @@ $(document).ready(function(){
       <h3>Enrolled modules</h3>
       <table>
         <tr>
-          <td><a href="module-record-t1c.html">Investigating the social world (DD103)</a></td>
+          <td><a href="module-record-t1a.html">Investigating the social world (DD103)</a></td>
           </tr>
       </table>
       <h3>Completed modules</h3>
       <table>
         <tr>
-          <td><a href="module-record-t1c.html"> Introducing the social sciences (DD102)</a></td>
+          <td><a href="module-record-t1b.html"> Introducing the social sciences (DD102)</a></td>
           <td>2014</td>
           <td>Fail</td>
         </tr>
         <tr>
-          <td><a href="module-record-t1c.html">People, work and Society Access module (Y032)</a></td>
+          <td><a href="module-record-t1b.html">People, work and Society Access module (Y032)</a></td>
           <td>2013</td>
           <td>Pass</td>
         </tr>
