--- a/study-record-t1d.html
+++ b/study-record-t1d.html
@@ -149,12 +149,12 @@ If you want to start studying again you will need to contact your SST to enrol. 
       <h3>Completed modules</h3>
       <table>
         <tr>
-          <td><a href="module-record-t1c.html"> Introducing the social sciences (DD102)</a></td>
+          <td><a href="module-record-t1b.html"> Introducing the social sciences (DD102)</a></td>
           <td>2014</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="module-record-t1c.html">People, work and Society Access module (Y032)</a></td>
+          <td><a href="module-record-t1b.html">People, work and Society Access module (Y032)</a></td>
           <td>2013</td>
           <td>Pass</td>
         </tr>
@@ -162,7 +162,7 @@ If you want to start studying again you will need to contact your SST to enrol. 
       <h3>Cancelled modules</h3>
       <table>
         <tr>
-          <td><a href="module-record-t1d.html">Investigating the social world (DD103)</a></td>
+          <td><a href="module-record-t1c.html">Investigating the social world (DD103)</a></td>
         </tr>
       </table>
       <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA/BSc (Honours) Open degree qualification</p>
