--- a/study-record-t1d.html
+++ b/study-record-t1d.html
@@ -129,7 +129,7 @@ If you want to start studying again you will need to contact your SST to enrol. 
     <div class="box-qual-inner">
       <ul class="list-style1">
         <li><strong>Code</strong>: QD</li>
-        <li><strong>Status</strong>: in progress</li>
+        <li><strong>Status</strong>: not currently studying</li>
         <li><strong>Credits</strong>: 90 of 360</li>
       </ul>
       
