--- a/study-record-t1e.html
+++ b/study-record-t1e.html
@@ -131,7 +131,7 @@ If you’re not planning to study in [2015/16) you can <a href="#">extend your s
     <div class="box-qual-inner">
       <ul class="list-style1">
         <li><strong>Code</strong>: QD</li>
-        <li><strong>Status</strong>: not currently studying</li>
+        <li><strong>Status</strong>: on a study break</li>
         <li><strong>Credits</strong>: 90 of 360</li>
       </ul>
       
