--- a/module-record-t1a.html
+++ b/module-record-t1a.html
@@ -31,7 +31,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no" />
 </head>
 
-<body class="ou-wide ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
+<body class="ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
 <script type="text/javascript">if (typeof window.ou_sitestat=='function')ou_sitestat();</script>
 <!--<script type="text/javascript" src="includes/headers-footers/ou-cookie-policy.js"></script>-->
 <div id="ou-org-header"> <a class="ou-skip" href="#">Skip to content</a> <a class="ou-link-ou" href="#"><img src="includes/headers-footers/oulogo-56.jpg" alt="The Open University" /></a>
@@ -300,12 +300,43 @@
 <p class="note">These details reflect your record as held by The Open 
   University on 14 September 2015. If you think
   that this record is incorrect, please <a href="student-support-team.aspx?m=T218">contact us</a>.</p>
-<p><a href="study-record-t1.html">Back to your study record</a></p>
+<p><a href="study-record-t1a.html">Back to your study record</a></p>
 
 </div>
 
 </div>
 </div>
+
+<div class="r3 aside">
+
+<div class="box box-questions">
+<h2>How do I?</h2>
+<ul>
+  <li><a href="#">Change my qualification?</a></li>
+  <li><a href="#">Change my module?</a></li>
+  <li><a href="#">Take a break from my studies</a>?</li>
+  <li><a href="#">Apply for a tuition fee loan?</a></li>
+  <li><a href="#">Get help studying for a disability?</a></li>
+</ul>
+  
+<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+
+</div>
+
+<!--
+<div class="box box-downloads">
+<h2>Downloads</h2>
+<ul>
+  <li><a href="#">Student Academic Summary</a></li>
+  <li><a href="#">Conditions of registration</a></li>
+  <li><a href="#">Fee rules</a></li>
+  <li><a href="#">General Qualifications Regulations</a></li>
+</ul>
+</div>
+-->
+
+</div>
+
 </div>
 </div>
 
