Help tips on SH, interrupt page, updated index
Ready for Stephen T to work some design magic.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ hr {margin:2em 0; padding:0;}
 
 <h1>Study Planning</h1>
 
+<ul>
+ <li><a href="studenthome-help-tips.html">StudentHome with Help Tips</a></li>
+  <li><a href="interrupt-page.html">Interrupt page</a></li>
+</ul>
+
+
 <p>Click below to see a StudentHome for each student then visit the Profile tab and navigate thorugh to the study record.</p>
 
 <h2>Persona experiences</h2>
