--- a/module-record-t1b.html
+++ b/module-record-t1b.html
@@ -79,7 +79,7 @@
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome-t1.html">StudentHome</a></li>
 	<li><a href="profile-t1.html">Profile</a></li>
-  <li><a href="study-record-t1b.html">Study record</a></li>
+  <li><a href="t1-study-record-scenarios.html">Study record</a></li>
 	<li>DD102 Introducing the social sciences</li>
 </ol>
 
@@ -251,7 +251,7 @@
 <p class="note">These details reflect your record as held by The Open 
   University on 14 September 2015. If you think
   that this record is incorrect, please <a href="student-support-team.aspx?m=T218">contact us</a>.</p>
-<p><a href="study-record-t1b.html">Back to your study record</a></p>
+<p><a href="t1-study-record-scenarios.html">Back to your study record</a></p>
 
 </div>
 
