--- a/study-record-t1c.html
+++ b/study-record-t1c.html
@@ -146,7 +146,7 @@ $(document).ready(function(){
       <h3>Pending resit</h3>
       <table>
         <tr>
-          <td><a href="module-record-t1c.html"> Introducing the social sciences (DD102)</a></td>
+          <td><a href="module-record-t1d.html"> Introducing the social sciences (DD102)</a></td>
         </tr>
       </table>
       <h3>Completed modules</h3>
