--- a/t1-module-record-scenarios.html
+++ b/t1-module-record-scenarios.html
@@ -8,9 +8,10 @@
 <body>
 <p>Choose scenario</p>
 <ol>
-  <li><a href="study-record-t1b.html">Scenario 1</a></li>
-  <li><a href="module-record-t1c.html">Scenario 2 (D, AB)</a></li>
-  <li><a href="module-record-t1d.html">Scenario 3 (R)</a></li>
+  <li><a href="module-record-t1a.html">Scenario 1 (Enrolled)</a></li>
+  <li><a href="module-record-t1b.html">Scenario 2 (Completed)</a></li>
+  <li><a href="module-record-t1c.html">Scenario 3 (Deferred, Assessment banking)</a></li>
+  <li><a href="module-record-t1d.html">Scenario 4 (Resit)</a></li>
 </ol>
 <p>&nbsp;</p>
 </body>
