--- a/module-record-t1a.html
+++ b/module-record-t1a.html
@@ -104,6 +104,7 @@
     <h2 class="style1">Module status</h2>
         
     <p>Registered on 29 May 2015.</p>
+    <p><a href="#">Stop studying this module</a></p>
 
 </div>
 
