--- a/module-record-t1c.html
+++ b/module-record-t1c.html
@@ -109,6 +109,8 @@
 
 <h2 class="style1">Module status</h2>
 
+<p><a href="#" class="ou-btn">Restart this module</a></p>
+
   <ul>
     <li>You cancelled your place on this module on 11th January 2016.</li>
     <li>You requested to defer this module with Assessment Banking.</li>
