Added the tip boxes to all templates

--- a/assessment-calculator.html
+++ b/assessment-calculator.html
@@ -95,30 +95,31 @@
     
 
 </div>
-
-
 </div>
 
-</div>
+
 </div>
 
 <div class="r3 aside">
 
 
-
-<!--
-<div class="box box-downloads">
-<h2>Downloads</h2>
+<div class="box box-questions">
+<h2>How do I?</h2>
 <ul>
-  <li><a href="#">Student Academic Summary</a></li>
-  <li><a href="#">Conditions of registration</a></li>
-  <li><a href="#">Fee rules</a></li>
-  <li><a href="#">General Qualifications Regulations</a></li>
+  <li><a href="#">Change my qualification?</a></li>
+  <li><a href="#">Change my module?</a></li>
+  <li><a href="#">Take a break from my studies</a>?</li>
+  <li><a href="#">Apply for a tuition fee loan?</a></li>
+  <li><a href="#">Get help studying for a disability?</a></li>
 </ul>
-</div>
--->
+  
+<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
 
 </div>
+
+</div>
+
+
 
 </div>
 </div>
