--- a/contact-details.html
+++ b/contact-details.html
@@ -31,7 +31,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no" />
 </head>
 
-<body class="ou-wide ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
+<body class="ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
 <script type="text/javascript">if (typeof window.ou_sitestat=='function')ou_sitestat();</script>
 <!--<script type="text/javascript" src="includes/headers-footers/ou-cookie-policy.js"></script>-->
 <div id="ou-org-header"> <a class="ou-skip" href="#">Skip to content</a> <a class="ou-link-ou" href="#"><img src="includes/headers-footers/oulogo-56.jpg" alt="The Open University" /></a>
@@ -108,22 +108,22 @@
     <tr>
       <th>Address</th>
       <td>3 Priory Avenue, St Denys, Southampton, SO17 2LT</td>
-      <td><a href="#">Edit</a></td>
+      <td><a href="profile-edit.html">Edit</a></td>
     </tr>
     <tr>
       <th>Delivery address</th>
       <td>As above</td>
-      <td><a href="#">Edit</a></td>
+      <td><a href="profile-edit.html">Edit</a></td>
     </tr>
     <tr>
       <th>Phone</th>
       <td>07811 3435232</td>
-      <td><a href="#">Edit</a></td>
+      <td><a href="profile-edit.html">Edit</a></td>
     </tr>
     <tr>
       <th>Email</th>
       <td>kapil.dev@hotmail</td>
-      <td><a href="#">Edit</a></td>
+      <td><a href="profile-edit.html">Edit</a></td>
     </tr>
     <tr>
       <th>Your SST</th>
@@ -139,12 +139,12 @@
     <tr>
       <th>Preferred online name</th>
       <td>Kapil Dev</td>
-      <td><a href="#">Edit</a></td>
+      <td><a href="profile-edit.html">Edit</a></td>
     </tr>
     <tr>
       <th>StudentHome introduction</th>
       <td>&quot;Welcome Kapil&quot;</td>
-      <td><a href="#">Edit</a></td>
+      <td><a href="profile-edit.html">Edit</a></td>
     </tr>
   </table>
 <p><a href="profile-a.html">Back to Profile</a></p>
@@ -152,6 +152,23 @@
 
 </div>
 </div>
+
+<div class="r3 aside">
+
+<div class="box box-questions">
+<h2>How do I?</h2>
+<ul>
+  <li><a href="#">Change my name and address</a></li>
+  <li><a href="#">Get a statement of my academic record</a></li>
+  <li><a href="#">Change my password</a></li>
+  <li><a href="#">Apply for a tuition fee loan</a></li>
+  <li><a href="#">Tell the OU about my disability</a></li>
+</ul>
+  
+<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+
+</div>
+
 </div>
 </div>
 <div id="ou-org-footer">
