--- a/current-occupation.html
+++ b/current-occupation.html
@@ -31,7 +31,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no" />
 </head>
 
-<body class="ou-wide ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
+<body class="ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
 <script type="text/javascript">if (typeof window.ou_sitestat=='function')ou_sitestat();</script>
 <!--<script type="text/javascript" src="includes/headers-footers/ou-cookie-policy.js"></script>-->
 <div id="ou-org-header"> <a class="ou-skip" href="#">Skip to content</a> <a class="ou-link-ou" href="#"><img src="includes/headers-footers/oulogo-56.jpg" alt="The Open University" /></a>
@@ -93,33 +93,33 @@
 <tbody><tr>
 	<th>Occupation status</th>
 	<td>In full-time work/self-employed</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 
 	</tr>
 <tr>
 	<th>Occupation type</th>
 	<td>Middle or Junior Managers</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 	</tr>
 <tr>
 	<th>Occupation title</th>
 	<td>assistant team leader / supervisor</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 	</tr>
 <tr>
 	<th>Subject area of interest</th>
 	<td>Business and Management</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 	</tr>
 <tr>
 	<th>Motivation</th>
 	<td>Employment/career &amp; personal development equally important</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 	</tr>
 <tr>
 	<th>Career motivation</th>
 	<td>Develop or progress in your current career</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 	</tr>
 
 </tbody></table>
@@ -130,6 +130,23 @@
 
 </div>
 </div>
+
+<div class="r3 aside">
+
+<div class="box box-questions">
+<h2>How do I?</h2>
+<ul>
+  <li><a href="#">Change my name and address</a></li>
+  <li><a href="#">Get a statement of my academic record</a></li>
+  <li><a href="#">Change my password</a></li>
+  <li><a href="#">Apply for a tuition fee loan</a></li>
+  <li><a href="#">Tell the OU about my disability</a></li>
+</ul>
+  
+<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+
+</div>
+
 </div>
 </div>
 <div id="ou-org-footer">
