--- a/identity-and-needs.html
+++ b/identity-and-needs.html
@@ -31,7 +31,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no" />
 </head>
 
-<body class="ou-wide ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
+<body class="ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
 <script type="text/javascript">if (typeof window.ou_sitestat=='function')ou_sitestat();</script>
 <!--<script type="text/javascript" src="includes/headers-footers/ou-cookie-policy.js"></script>-->
 <div id="ou-org-header"> <a class="ou-skip" href="#">Skip to content</a> <a class="ou-link-ou" href="#"><img src="includes/headers-footers/oulogo-56.jpg" alt="The Open University" /></a>
@@ -93,53 +93,53 @@
 <tbody><tr>
 	<th>Marital status</th>
 	<td>Single (never married or never in civil partnership)</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 
 	</tr>
 <tr>
 	<th>Disability</th>
 	<td>You have declared you have no disability.</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 	</tr>
 <tr>
 	<th>Caring responsibilities</th>
 	<td>No</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 	</tr>
 
 <tr>
 	<th>Country of legal nationality</th>
 	<td>United Kingdom</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 	</tr>
 <tr>
 	<th>Welsh national identity</th>
 	<td>British, Welsh</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 	</tr>
 <tr>
 	<th>Welsh speaker</th>
 	<td>Not Welsh speaker</td>
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 	</tr>
 
 <tr>
 	<th>Ethnic origin</th>
 	<td>White - British</td>
 
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 </tr>
 <tr>
 	<th>Sexual orientation</th>
 	<td>Heterosexual</td>
 
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 </tr>
 <tr>
 	<th>Religion or belief</th>
 	<td>No religion</td>
 
-	<td><a href="#">Edit</a></td>
+	<td><a href="profile-edit.html">Edit</a></td>
 </tr>
 
 </tbody></table>
@@ -149,6 +149,23 @@
 
 </div>
 </div>
+
+<div class="r3 aside">
+
+<div class="box box-questions">
+<h2>How do I?</h2>
+<ul>
+  <li><a href="#">Change my name and address</a></li>
+  <li><a href="#">Get a statement of my academic record</a></li>
+  <li><a href="#">Change my password</a></li>
+  <li><a href="#">Apply for a tuition fee loan</a></li>
+  <li><a href="#">Tell the OU about my disability</a></li>
+</ul>
+  
+<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+
+</div>
+
 </div>
 </div>
 <div id="ou-org-footer">
