--- a/module-record.html
+++ b/module-record.html
@@ -31,7 +31,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no" />
 </head>
 
-<body class="ou-wide ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
+<body class="ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
 <script type="text/javascript">if (typeof window.ou_sitestat=='function')ou_sitestat();</script>
 <!--<script type="text/javascript" src="includes/headers-footers/ou-cookie-policy.js"></script>-->
 <div id="ou-org-header"> <a class="ou-skip" href="#">Skip to content</a> <a class="ou-link-ou" href="#"><img src="includes/headers-footers/oulogo-56.jpg" alt="The Open University" /></a>
@@ -80,13 +80,13 @@
 	<li><a href="studenthome.html">StudentHome</a></li>
 	<li><a href="profile.html">Profile</a></li>
   <li><a href="study-record.html">Study record</a></li>
-	<li>T207 Engineering: mechanics, materials, design</li>
+	<li>{module-title}</li>
 </ol>
 
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1 class="h1main">T207 Engineering: mechanics, materials, design</h1>
+<h1 class="h1main">{module-title}</h1>
 
 <div class="inview">
 
@@ -209,6 +209,8 @@
     
     </tbody></table>
 
+    <p><a href="assessment-calculator.html">Assessment Calculator</a></p>
+
 
 </div>
 
@@ -291,6 +293,22 @@
 </div>
 
 </div>
+</div>
+<div class="r3 aside">
+
+
+<div class="box box-questions">
+<h2>How do I?</h2>
+<ul>
+  <li><a href="#">Change my qualification?</a></li>
+  <li><a href="#">Change my module?</a></li>
+  <li><a href="#">Take a break from my studies</a>?</li>
+  <li><a href="#">Apply for a tuition fee loan?</a></li>
+  <li><a href="#">Get help studying for a disability?</a></li>
+</ul>
+  
+<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+
 </div>
 </div>
 </div>
