--- a/next-module.html
+++ b/next-module.html
@@ -99,27 +99,30 @@
 </div>
 
 </div>
-</div>
 
 <div class="r3 aside">
 
-
-
-<!--
-<div class="box box-downloads">
-<h2>Downloads</h2>
+<div class="box box-questions">
+<h2>How do I?</h2>
 <ul>
-  <li><a href="#">Student Academic Summary</a></li>
-  <li><a href="#">Conditions of registration</a></li>
-  <li><a href="#">Fee rules</a></li>
-  <li><a href="#">General Qualifications Regulations</a></li>
+  <li><a href="#">Change my name and address</a></li>
+  <li><a href="#">Get a statement of my academic record</a></li>
+  <li><a href="#">Change my password</a></li>
+  <li><a href="#">Apply for a tuition fee loan</a></li>
+  <li><a href="#">Tell the OU about my disability</a></li>
 </ul>
+  
+<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+
 </div>
--->
+</div>
+</div>
+
+
 
 </div>
 
-</div>
+
 </div>
 
 <div id="ou-org-footer">
