--- a/profile.html
+++ b/profile.html
@@ -115,10 +115,24 @@
 </div>
 
 </div>
-</div>
+
+
 
 <div class="r3 aside">
 
+<div class="box box-questions">
+<h2>How do I?</h2>
+<ul>
+  <li><a href="#">Change my name and address</a></li>
+  <li><a href="#">Get a statement of my academic record</a></li>
+  <li><a href="#">Change my password</a></li>
+  <li><a href="#">Apply for a tuition fee loan</a></li>
+  <li><a href="#">Tell the OU about my disability</a></li>
+</ul>
+  
+<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+
+</div>
 
 
 </div>
