--- a/study-record.html
+++ b/study-record.html
@@ -155,20 +155,22 @@ $(document).ready(function(){
   </tr>
 </table>
 
-<p><a href="#" class="ou-btn">Choose next modules</a></p>
-
+<p class="code">If NFQ</p>
+<p><a href="interrupt-page.html" class="ou-btn">Choose next modules</a></p>
+<p class="code">If OFQ</p>
+<p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
 <hr>
 
 <h3>Enrolled modules</h3>
 
-<p class="loan-text">Student Finance England (SFE) has approved a <a href="your-loan-a.html">loan for 2015/2016</a>.</p>
+<p class="loan-text">Student Finance England (SFE) has approved a <a href="finance.html">loan for 2015/2016</a>.</p>
 
 <table>
   <tr>
-    <td><a href="module-record-a-t276.html">Engineering: professions, practice and skills 2 (T276)</a></td>
+    <td><a href="module-record.html">Engineering: professions, practice and skills 2 (T276)</a></td>
   </tr>
   <tr>
-    <td><a href="module-record-a-t218.html">Design for engineers (T218)</a></td>
+    <td><a href="module-record.html">Design for engineers (T218)</a></td>
   </tr>
 </table>
 
@@ -177,27 +179,27 @@ $(document).ready(function(){
 
 <table>
   <tr>
-    <td><a href="module-record-a-t207.html"> Engineering: mechanics, materials, design (T207)</a></td>
+    <td><a href="module-record.html"> Engineering: mechanics, materials, design (T207)</a></td>
     <td>2014</td>
     <td>Grade 3 pass</td>
   </tr>
   <tr>
-    <td><a href="#">Engineering: professions, practice and skills 1 (T176)</a></td>
+    <td><a href="module-record.html">Engineering: professions, practice and skills 1 (T176)</a></td>
     <td>2014</td>
     <td>Pass</td>
   </tr>
   <tr>
-    <td><a href="#">Exploring mathematics (MS221)</a></td>
+    <td><a href="module-record.html">Exploring mathematics (MS221)</a></td>
     <td>2013</td>
     <td>Grade 4 pass</td>
   </tr>
   <tr>
-    <td><a href="#">Using mathematics (MST121)</a></td>
+    <td><a href="module-record.html">Using mathematics (MST121)</a></td>
     <td>2013</td>
     <td>Grade 3 pass</td>
   </tr>
   <tr>
-    <td><a href="#">Engineering the future (T173)</a></td>
+    <td><a href="module-record.html">Engineering the future (T173)</a></td>
     <td>2012</td>
     <td>Distinction</td>
   </tr>
