--- a/module-record-t1a.html
+++ b/module-record-t1a.html
@@ -313,11 +313,15 @@
 <div class="box box-questions">
 <h2>How do I?</h2>
 <ul>
-  <li><a href="#">Change my qualification?</a></li>
-  <li><a href="#">Change my module?</a></li>
-  <li><a href="#">Take a break from my studies</a>?</li>
-  <li><a href="#">Apply for a tuition fee loan?</a></li>
-  <li><a href="#">Get help studying for a disability?</a></li>
+  <li><a href="#"> Submit my TMA?
+
+</a></li>
+  <li><a href="#"> Improve my study skills?</a></li>
+  <li><a href="#"> Change my qualification?</a></li>
+  <li><a href="#">Change my module?
+    
+    </a></li>
+  <li><a href="#"> Get help studying with a disability?</a></li>
 </ul>
   
 <p class="box-link"><a href="#">Get more from the Help Centre</a></p>
