test candidate 2 shells

--- a/index.html
+++ b/index.html
@@ -115,5 +115,20 @@ hr {margin:2em 0; padding:0;}
 <li><a href="module-record-t1d.html">Module record d (resit)</a></li>
 </ul>
 
+<h3>Test candidate 2</h3>
+<ul>
+<li><a href="studenthome-t2.html">StudentHome</a></li>
+<li><a href="profile-t2.html">Profile</a></li>
+<li><a href="study-record-t2a.html">Study record a</a></li>
+<li><a href="study-record-t2b.html">Study record b (deferred with assessment banking)</a></li>
+<li><a href="study-record-t2c.html">Study record c (resitting)</a></li>
+<li><a href="study-record-t2d.html">Study record d (lapsed)</a></li>
+<li><a href="study-record-t2e.html">Study record e (study break)</a></li>
+<li><a href="module-record-t2a.html">Module record a</a></li>
+<li><a href="module-record-t2b.html">Module record b (completed)</a></li>
+<li><a href="module-record-t2c.html">Module record c (deferred)</a></li>
+<li><a href="module-record-t2d.html">Module record d (resit)</a></li>
+</ul>
+
 </body>
 </html>
