--- a/your-previous-edu-bg-t2.html
+++ b/your-previous-edu-bg-t2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Assessment calculator - StudentHome - Open University</title>
+<title>Tutorials - Open University</title>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
@@ -31,7 +31,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no" />
 </head>
 
-<body class="ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
+<body class="ou-wide ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
 <script type="text/javascript">if (typeof window.ou_sitestat=='function')ou_sitestat();</script>
 <!--<script type="text/javascript" src="includes/headers-footers/ou-cookie-policy.js"></script>-->
 <div id="ou-org-header"> <a class="ou-skip" href="#">Skip to content</a> <a class="ou-link-ou" href="#"><img src="includes/headers-footers/oulogo-56.jpg" alt="The Open University" /></a>
@@ -62,8 +62,8 @@
 
 <div class="mnuwrap"><div class="sh-header" role="navigation">
 <ul>
-<li class="sh-home"><a href="studenthome.html">StudentHome</a></li>
-<li class="sh-profile"><a href="profile.html" class="selected">Profile</a></li>
+<li class="sh-home"><a href="studenthome-t2.html">StudentHome</a></li>
+<li class="sh-profile"><a href="profile-t2.html" class="selected">Profile</a></li>
 <li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
@@ -77,52 +77,61 @@
 
 
 <ol class="ou-breadcrumb">
-	<li><a href="studenthome.html">StudentHome</a></li>
-	<li><a href="profile.html">Profile</a></li>
-  <li><a href="study-record.html">Study record</a></li>
-  <li>Research record</li>
-</ol>
+	<li><a href="studenthome-t2.html">StudentHome</a></li>
+	<li><a href="profile-t2.html">Profile</a></li>
+	<li>Your previous education and background</li></ol>
 
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>Research record</h1>
+<h1 class="h1main">Your previous education and background</h1>
+
 <div class="inview">
-  
 
-<p>Content to follow</p>
-    
-
+<table>
+    <tr>
+      <th>Highest education level at start of OU study</th>
+      <td>2 or more A-Level, SQA Highers or equivalent</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>Welsh Baccalaureate</th>
+      <td>Did not undertake Welsh Baccalaureate Advanced Diploma course</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>Higher education prior to OU study</th>
+      <td>Has not had prior HE experience in UK lasting 6 mths or more</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>Last education institution</th>
+      <td>UK state scool</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>First generation status</th>
+      <td>Neither parent studied at a higher education institution</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>English for academic study</th>
+      <td>More than 2 years since leaving school</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>Care Leaver</th>
+      <td>I have never been in care</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+  </table>
+<p><a href="profile-t2.html">Back to Profile</a></p>
 </div>
 
-
-</div>
-
-</div>
-
-<div class="r3 aside">
-
-<div class="box box-questions">
-<h2>How do I?</h2>
-<ul>
-  <li><a href="#">Change my name and address</a></li>
-  <li><a href="#">Get a statement of my academic record</a></li>
-  <li><a href="#">Change my password</a></li>
-  <li><a href="#">Apply for a tuition fee loan</a></li>
-  <li><a href="#">Tell the OU about my disability</a></li>
-</ul>
-  
-<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
-
 </div>
 </div>
 </div>
-
-
-
 </div>
-</div>
-
 <div id="ou-org-footer">
 
 <div class="ou-grid ou-mobile-footer" id="ou-mobile-jlinks"></div>
