--- a/profile-t2.html
+++ b/profile-t2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Assessment calculator - StudentHome - Open University</title>
+<title>Tutorials - Open University</title>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
@@ -31,7 +31,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no" />
 </head>
 
-<body class="ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
+<body class="ou-wide ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
 <script type="text/javascript">if (typeof window.ou_sitestat=='function')ou_sitestat();</script>
 <!--<script type="text/javascript" src="includes/headers-footers/ou-cookie-policy.js"></script>-->
 <div id="ou-org-header"> <a class="ou-skip" href="#">Skip to content</a> <a class="ou-link-ou" href="#"><img src="includes/headers-footers/oulogo-56.jpg" alt="The Open University" /></a>
@@ -62,8 +62,8 @@
 
 <div class="mnuwrap"><div class="sh-header" role="navigation">
 <ul>
-<li class="sh-home"><a href="studenthome.html">StudentHome</a></li>
-<li class="sh-profile"><a href="profile.html" class="selected">Profile</a></li>
+<li class="sh-home"><a href="studenthome-t2.html">StudentHome</a></li>
+<li class="sh-profile"><a href="profile-a.html" class="selected">Profile</a></li>
 <li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
@@ -77,52 +77,44 @@
 
 
 <ol class="ou-breadcrumb">
-	<li><a href="studenthome.html">StudentHome</a></li>
-	<li><a href="profile.html">Profile</a></li>
-  <li><a href="study-record.html">Study record</a></li>
-  <li>Research record</li>
+	<li><a href="studenthome-t2.html">StudentHome</a></li>
+	<li>Profile</li>
 </ol>
-
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>Research record</h1>
+<h1 class="h1main">Profile</h1>
+
 <div class="inview">
-  
 
-<p>Content to follow</p>
+<p>You can view and change your</p>
+
+  <ul>
+  <li><a href="your-contact-details-t2.html">Contact details</a></li>
+      <li><a href="your-current-occupation-study-t2.html">Current occupation and study motivation</a></li>
+          <li><a href="your-identity-needs-t2.html">Identity, needs and cicumstances</a></li>
+  <li><a href="your-previous-edu-bg-t2.html">Previous education and background</a></li>
+    <li><a href="study-record-t2a.html">Study record</a></li>
+    <li><a href="your-loan-t2.html">Student loan</a></li>
+
+    </ul>
+
+<p>You can also</p>
+    <ul>
+    <li><a href="#">Change your password</a></li>
+    <li><a href="http://learn2.open.ac.uk/user/profile.php">Edit your online appearance</a></li>
+    <li><a href="http://learn2.open.ac.uk/course/format/studyplan/settings_manage.php">Set preferences for your online learning environment</a></li>
     
-
-</div>
-
-
-</div>
-
-</div>
-
-<div class="r3 aside">
-
-<div class="box box-questions">
-<h2>How do I?</h2>
-<ul>
-  <li><a href="#">Change my name and address</a></li>
-  <li><a href="#">Get a statement of my academic record</a></li>
-  <li><a href="#">Change my password</a></li>
-  <li><a href="#">Apply for a tuition fee loan</a></li>
-  <li><a href="#">Tell the OU about my disability</a></li>
-</ul>
-  
-<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
-
-</div>
-</div>
-</div>
+  </ul>
 
 
 
 </div>
-</div>
 
+</div>
+</div>
+</div>
+</div>
 <div id="ou-org-footer">
 
 <div class="ou-grid ou-mobile-footer" id="ou-mobile-jlinks"></div>
