--- a/your-contact-details-t2.html
+++ b/your-contact-details-t2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Assessment calculator - StudentHome - Open University</title>
+<title>Tutorials - Open University</title>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
@@ -31,7 +31,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no" />
 </head>
 
-<body class="ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
+<body class="ou-wide ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
 <script type="text/javascript">if (typeof window.ou_sitestat=='function')ou_sitestat();</script>
 <!--<script type="text/javascript" src="includes/headers-footers/ou-cookie-policy.js"></script>-->
 <div id="ou-org-header"> <a class="ou-skip" href="#">Skip to content</a> <a class="ou-link-ou" href="#"><img src="includes/headers-footers/oulogo-56.jpg" alt="The Open University" /></a>
@@ -62,8 +62,8 @@
 
 <div class="mnuwrap"><div class="sh-header" role="navigation">
 <ul>
-<li class="sh-home"><a href="studenthome.html">StudentHome</a></li>
-<li class="sh-profile"><a href="profile.html" class="selected">Profile</a></li>
+<li class="sh-home"><a href="studenthome-t2.html">StudentHome</a></li>
+<li class="sh-profile"><a href="profile-t2.html" class="selected">Profile</a></li>
 <li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
@@ -77,52 +77,83 @@
 
 
 <ol class="ou-breadcrumb">
-	<li><a href="studenthome.html">StudentHome</a></li>
-	<li><a href="profile.html">Profile</a></li>
-  <li><a href="study-record.html">Study record</a></li>
-  <li>Research record</li>
+	<li><a href="studenthome-t2.html">StudentHome</a></li>
+	<li><a href="profile-t2.html">Profile</a></li>
+	<li>Your contact details</li>
 </ol>
 
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>Research record</h1>
+<h1 class="h1main">Your contact details</h1>
+
 <div class="inview">
-  
 
-<p>Content to follow</p>
-    
-
+<table>
+    <tr>
+      <th>Name</th>
+      <td>Test student 1</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <th>PI</th>
+      <td>012345678</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <th>OUCU</th>
+      <td>kd1234</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <th>Address</th>
+      <td>The Open University, Milton Keynes</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>Delivery address</th>
+      <td>As above</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>Phone</th>
+      <td>01234 5678901</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>Email</th>
+      <td>teststudent1@open.ac.uk</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>Your SST</th>
+      <td><a href="#">Business and Management (Undergraduate) Student Support Team</a> for BA (Honours) Business Studies and B120.<br>
+                  Phone: 029 2167 8783	</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <th>Catchment area</th>
+      <td>Shrewsbury (0001)</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <th>Preferred online name</th>
+      <td>Test student 1</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+    <tr>
+      <th>StudentHome introduction</th>
+      <td>&quot;Welcome Test student 1&quot;</td>
+      <td><a href="#">Edit</a></td>
+    </tr>
+  </table>
+<p><a href="profile-a.html">Back to Profile</a></p>
 </div>
 
-
-</div>
-
-</div>
-
-<div class="r3 aside">
-
-<div class="box box-questions">
-<h2>How do I?</h2>
-<ul>
-  <li><a href="#">Change my name and address</a></li>
-  <li><a href="#">Get a statement of my academic record</a></li>
-  <li><a href="#">Change my password</a></li>
-  <li><a href="#">Apply for a tuition fee loan</a></li>
-  <li><a href="#">Tell the OU about my disability</a></li>
-</ul>
-  
-<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
-
 </div>
 </div>
 </div>
-
-
-
 </div>
-</div>
-
 <div id="ou-org-footer">
 
 <div class="ou-grid ou-mobile-footer" id="ou-mobile-jlinks"></div>
