--- a/module-record-t2a.html
+++ b/module-record-t2a.html
@@ -267,7 +267,7 @@
     <table>
     <tbody>
     <tr>
-    <td><a href="qualification.aspx?q=Q65&amp;o=1&amp;stay=1">BA/BSc (Honours) Open Degree</a></td>
+    <td><a href="qualification.aspx?q=Q65&amp;o=1&amp;stay=1">Bachelor of Science (Honours) in Health and Social Care</a></td>
     <td><a href="qualification-link.aspx?q=Q65&amp;o=1" class="std6">Stop this module counting</a></td></tr>
     </tbody>
     </table>
