--- a/module-record-t2b.html
+++ b/module-record-t2b.html
@@ -86,7 +86,7 @@
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>DD102 Introducing the social sciences</h1>
+<h1>K319 Adulthood, ageing and the life course </h1>
 
 <div class="inview">
   
@@ -95,7 +95,7 @@
   <li><strong>Level</strong>: 1</li>
   <li><strong>Credits</strong>: 60</li>
   <li><a href="#">DD102 module description</a></li>
-  <li><a href="#">DD102 module website</a> (read only)</li>
+  <li><a href="#">K319 Adulthood, ageing and the life course</a> (read only)</li>
 </ul>
 
 <div class="ou-block">
@@ -218,7 +218,7 @@
     <table class="two-cols">
     <tbody>
     <tr>
-    <td><a href="qualification.aspx?q=Q65&amp;o=1&amp;stay=1">BA/BSc (Honours) Open Degree</a></td>
+    <td><a href="qualification.aspx?q=Q65&amp;o=1&amp;stay=1">Bachelor of Science (Honours) in Health and Social Care</a></td>
     <td><a href="qualification-link.aspx?q=Q65&amp;o=1" class="std6">Stop this module counting</a></td></tr>
     </tbody>
     </table>
