slight changes to show a recognisable module to the student

--- a/module-record-t2c.html
+++ b/module-record-t2c.html
@@ -80,13 +80,13 @@
 	<li><a href="studenthome-t2.html">StudentHome</a></li>
 	<li><a href="profile-t2.html">Profile</a></li>
   <li><a href="t2-study-record-scenarios.html">Study record</a></li>
-	<li>DD103 Investigating the social world</li>
+	<li>A218 Medicine and society in Europe 1500-1930</li>
 </ol>
 
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>DD103 Investigating the social world</h1>
+<h1>A218 Medicine and society in Europe 1500-1930 </h1>
 <div class="inview">
 
 <div class="box-alert">
