--- a/module-record-t2d.html
+++ b/module-record-t2d.html
@@ -80,12 +80,12 @@
 	<li><a href="studenthome-t2.html">StudentHome</a></li>
 	<li><a href="profile-t2.html">Profile</a></li>
   	<li><a href="t2-study-record-scenarios.html">Study record</a></li>
-	<li>DD102 Introducing the social sciences</li></ol>
+	<li>A218 Medicine and society in Europe 1500-1930</li></ol>
 
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>DD102 Introducing the social sciences</h1>
+<h1>A218 Medicine and society in Europe 1500-1930</h1>
 <div class="inview">
 
 <div class="box-alert">
