--- a/index.html
+++ b/index.html
@@ -130,5 +130,35 @@ hr {margin:2em 0; padding:0;}
 <li><a href="module-record-t2d.html">Module record d (resit)</a></li>
 </ul>
 
+<h3>Test candidate 3</h3>
+<ul>
+<li><a href="studenthome-t3.html">StudentHome</a></li>
+<li><a href="profile-t3.html">Profile</a></li>
+<li><a href="study-record-t3a.html">Study record a</a></li>
+<li><a href="study-record-t3b.html">Study record b (deferred with assessment banking)</a></li>
+<li><a href="study-record-t3c.html">Study record c (resitting)</a></li>
+<li><a href="study-record-t3d.html">Study record d (lapsed)</a></li>
+<li><a href="study-record-t3e.html">Study record e (study break)</a></li>
+<li><a href="module-record-t3a.html">Module record a</a></li>
+<li><a href="module-record-t3b.html">Module record b (completed)</a></li>
+<li><a href="module-record-t3c.html">Module record c (deferred)</a></li>
+<li><a href="module-record-t3d.html">Module record d (resit)</a></li>
+</ul>
+
+<h3>Test candidate 4</h3>
+<ul>
+<li><a href="studenthome-t4.html">StudentHome</a></li>
+<li><a href="profile-t4.html">Profile</a></li>
+<li><a href="study-record-t4a.html">Study record a</a></li>
+<li><a href="study-record-t4b.html">Study record b (deferred with assessment banking)</a></li>
+<li><a href="study-record-t4c.html">Study record c (resitting)</a></li>
+<li><a href="study-record-t4d.html">Study record d (lapsed)</a></li>
+<li><a href="study-record-t4e.html">Study record e (study break)</a></li>
+<li><a href="module-record-t4a.html">Module record a</a></li>
+<li><a href="module-record-t4b.html">Module record b (completed)</a></li>
+<li><a href="module-record-t4c.html">Module record c (deferred)</a></li>
+<li><a href="module-record-t4d.html">Module record d (resit)</a></li>
+</ul>
+
 </body>
 </html>
