studenthomes and study records

--- a/study-record-t4a.html
+++ b/study-record-t4a.html
@@ -130,7 +130,7 @@ $(document).ready(function(){
 
 <div class="box-qual">
 
-<h2>BA/BSc (Honours) Open degree<a href="#" class="show-hide minus">Expand/collapse</a> </h2>
+<h2>BA (Honours) Humanities<a href="#" class="show-hide minus">Expand/collapse</a> </h2>
 
 
 <div class="box-qual-inner">
