--- a/studenthome-t1.html
+++ b/studenthome-t1.html
@@ -115,7 +115,7 @@ ioe_createmenus();
 		<ul>
 		<li><span class="nolnk">Your personal identifier: 012345678</span></li>
 			<li><a href="#" class="break">tes1@test.open.ac.uk</a></li><li><a href="#">View emails sent by us recently</a></li><li><a href="profile-t1.html">Update personal details</a></li>
-      <li><a href="study-record-t1a.html">Study record</a></li>
+      <li><a href="t1-study-record-scenarios.html">Study record</a></li>
 		</ul>
 	</div></div>
 </div>
@@ -259,7 +259,7 @@ if (typeof window.InitModuleAjax=='function')InitModuleAjax('KQoLQD',1);
     
         <div class="panel">
             <ul class="body">
-                <li><a href="qualification.aspx?q=QD&amp;o=1&amp;stay=1">Study record, funding and advice for BA/BSc (Honours) Open degree</a></li><li><a href="/module-chooser/index.aspx?q=QD&amp;o=1">Choose your modules</a></li><li><a href="student-support-team.aspx?q=QD">Student Support Team</a></li>
+                <li><a href="t1-study-record-scenarios.html">Study record, funding and advice for BA/BSc (Honours) Open degree</a></li><li><a href="interrupt-page.html">Choose your modules</a></li><li><a href="student-support-team.aspx?q=QD">Student Support Team</a></li>
             </ul>
         </div>
     
