--- a/study-record-t2c.html
+++ b/study-record-t2c.html
@@ -126,7 +126,7 @@ $(document).ready(function(){
       <h3>Pending resit</h3>
       <table>
         <tr>
-          <td><a href="#">A218 Medicine and society in Europe 1500-1930</a></td>
+          <td><a href="module-record-t2d.html">A218 Medicine and society in Europe 1500-1930</a></td>
           <td>2014</td>
           <td>Fail</td>
         </tr>
@@ -134,80 +134,74 @@ $(document).ready(function(){
       <h3>Completed modules</h3>
       <table>
         <tr>
-          <td><a href="#">A218 Medicine and society in Europe 1500-1930</a></td>
+          <td><a href="module-record-t2b.html">A218 Medicine and society in Europe 1500-1930</a></td>
           <td>2014</td>
           <td>Fail</td>
         </tr>
         <tr>
-          <td><a href="#">K319 Adulthood, ageing and the life course</a></td>
+          <td><a href="module-record-t2b.html">K319 Adulthood, ageing and the life course</a></td>
           <td>2013</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">KE312 Working together for children</a></td>
+          <td><a href="module-record-t2b.html">KE312 Working together for children</a></td>
           <td>2013</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">K218 Working with children, young people and families</a></td>
+          <td><a href="module-record-t2b.html">K218 Working with children, young people and families</a></td>
           <td>2012</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">K101 An introduction to health and social care</a></td>
+          <td><a href="module-record-t2b.html">K101 An introduction to health and social care</a></td>
           <td>2011</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">SA188 Archaeology: the science of investigation</a></td>
+          <td><a href="module-record-t2b.html">SA188 Archaeology: the science of investigation</a></td>
           <td>2009</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">SA188 Archaeology: the science of investigation</a></td>
+          <td><a href="module-record-t2b.html">SA188 Archaeology: the science of investigation</a></td>
           <td>2009</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">A219 Exploring the classical world</a></td>
+          <td><a href="module-record-t2b.html">A219 Exploring the classical world</a></td>
           <td>2008</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">A177 Shakespeare: an introduction</a></td>
+          <td><a href="module-record-t2b.html">A177 Shakespeare: an introduction</a></td>
           <td>2007</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">AT272 Ancient and medieval cities: a technological history</a></td>
+          <td><a href="module-record-t2b.html">AT272 Ancient and medieval cities: a technological history</a></td>
           <td>2007</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">S193 Fossils and the history of life</a></td>
+          <td><a href="module-record-t2b.html">S193 Fossils and the history of life</a></td>
           <td>2006</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">S193 Fossils and the history of life</a></td>
+          <td><a href="module-record-t2b.html">S193 Fossils and the history of life</a></td>
           <td>2006</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">A103 An introduction to the humanities</a></td>
+          <td><a href="module-record-t2b.html">A103 An introduction to the humanities</a></td>
           <td>2005</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="#">A178 Perspectives on Leonardo da Vinci</a></td>
+          <td><a href="module-record-t2b.html">A178 Perspectives on Leonardo da Vinci</a></td>
           <td>2005</td>
           <td>Pass</td>
-        </tr>
-      </table>
-      <h3>Cancelled modules</h3>
-      <table>
-        <tr>
-          <td><a href="#">S103 Discovering science (2006)</a></td>
         </tr>
       </table>
       <p class="pdf-download">Your <a href="#">Student Academic Summary</a> is available as a PDF download, and contains a summary of your modules and qualifications.</p>
