--- a/module-record-t2b.html
+++ b/module-record-t2b.html
@@ -80,7 +80,7 @@
 	<li><a href="studenthome-t2.html">StudentHome</a></li>
 	<li><a href="profile-t2.html">Profile</a></li>
   <li><a href="t2-study-record-scenarios.html">Study record</a></li>
-	<li>DD102 Introducing the social sciences</li>
+	<li>K319 Adulthood, ageing and the life course </li>
 </ol>
 
 
@@ -94,8 +94,8 @@
   <li><strong>Start</strong>: 4 October 2014</li>
   <li><strong>Level</strong>: 1</li>
   <li><strong>Credits</strong>: 60</li>
-  <li><a href="#">DD102 module description</a></li>
-  <li><a href="#">K319 Adulthood, ageing and the life course</a> (read only)</li>
+  <li><a href="#">K319 module description</a></li>
+  <li><a href="#">K319  Adulthood, ageing and the life course</a> (read only)</li>
 </ul>
 
 <div class="ou-block">
