--- a/module-record-t2c.html
+++ b/module-record-t2c.html
@@ -97,8 +97,8 @@
   <li><strong>Start</strong>: 3 October 2015</li>
   <li><strong>Level</strong>: 1</li>
   <li><strong>Credits</strong>: 60</li>
-  <li><a href="#">DD103 module description</a></li>
-  <li><a href="#">DD103 module website</a></li>
+  <li><a href="#">A218 module description</a></li>
+  <li><a href="#">A218 module website</a></li>
 </ul>
 
 
