--- a/module-record-t2d.html
+++ b/module-record-t2d.html
@@ -94,8 +94,8 @@
   <li><strong>Start</strong>: September 2015 resit</li>
   <li><strong>Level</strong>: 1</li>
   <li><strong>Credits</strong>: 30</li>
-  <li><a href="#">DD102 module description</a></li>
-  <li><a href="#">DD102 module website</a></li>
+  <li><a href="#">A218 module description</a></li>
+  <li><a href="#">A218 module website</a></li>
 </ul>
 
 <div class="ou-block">
