--- a/study-record-t2b.html
+++ b/study-record-t2b.html
@@ -131,11 +131,6 @@ $(document).ready(function(){
     <h3>Completed modules</h3>
     <table>
       <tr>
-        <td><a href="module-record-t2b.html">A218 Medicine and society in Europe 1500-1930</a></td>
-        <td>2014</td>
-        <td>Pass</td>
-      </tr>
-      <tr>
         <td><a href="module-record-t2b.html">K319 Adulthood, ageing and the life course</a></td>
         <td>2013</td>
         <td>Pass</td>
@@ -204,7 +199,7 @@ $(document).ready(function(){
     <h3>Cancelled modules</h3>
     <table>
       <tr>
-        <td><a href="module-record-t2c.html">S103 Discovering science (2006)</a> (deferred, assessment banked)</td>
+        <td><a href="module-record-t2c.html">A218 Medicine and society in Europe 1500-1930</a><a href="module-record-t2c.html"></a> (deferred, assessment banked)</td>
       </tr>
     </table>
     <p class="pdf-download">Your <a href="#">Student Academic Summary</a> is available as a PDF download, and contains a summary of your modules and qualifications.</p>
