--- a/profile-t2.html
+++ b/profile-t2.html
@@ -95,7 +95,7 @@
           <li><a href="your-identity-needs-t2.html">Identity, needs and cicumstances</a></li>
   <li><a href="your-previous-edu-bg-t2.html">Previous education and background</a></li>
     <li><a href="study-record-t2a.html">Study record</a></li>
-    <li><a href="your-loan-t2.html">Student loan</a></li>
+    <li><a href="your-loan-t2.html">Payment history</a></li>
 
     </ul>
 
