--- a/studenthome-t2.html
+++ b/studenthome-t2.html
@@ -115,7 +115,7 @@ ioe_createmenus();
 		<ul>
 		<li><span class="nolnk">Your personal identifier: 012345678</span></li>
 			<li><a href="#" class="break">tes1@test.open.ac.uk</a></li><li><a href="#">View emails sent by us recently</a></li><li><a href="profile-t2.html">Update personal details</a></li>
-      <li><a href="study-record-t2a.html">Study record</a></li>
+      <li><a href="t2-study-record-scenarios.html">Study record</a></li>
 		</ul>
 	</div></div>
 </div>
