--- a/your-loan-t4.html
+++ b/your-loan-t4.html
@@ -84,7 +84,7 @@
 
 <div class="r2">
     <div class="ou-content" id="ou-content">
-      <h1 class="h1main">Your student loan for Bachelor of Engineering (Honours)</h1>
+      <h1 class="h1main">Your student loan for BA/BSc (Honours) Open degree</h1>
       <div class="inview">
 
 
